--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ grand_pet/lib/.packages
 grand_pet/lib/.flutter-plugins
 grand_pet/lib/.flutter-plugins-dependencies
 C:\Users\Nadri\.vscode\proyecto\GranPet\grand_pet\build
+android/
+assets/
+ios/
