--- a/grand_pet/pubspec.yaml
+++ b/grand_pet/pubspec.yaml
@@ -27,10 +27,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_slidable: 1.1.0
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   firebase_analytics:
@@ -44,9 +43,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
