--- a/grand_pet/pubspec.yaml
+++ b/grand_pet/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter_svg: ^0.17.3+1
   provider: ^6.0.1
   local_auth:
-  shared_preferences: 
+  shared_preferences: ^2.0.9
 
 dev_dependencies:
   flutter_test:
