--- a/grand_pet/pubspec.yaml
+++ b/grand_pet/pubspec.yaml
@@ -2,31 +2,31 @@ name: grand_pet
 description: A new Flutter project.
 
 publish_to: 'none'
-shared_preference:
+shared_preference: null
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter_slidable: 1.1.0
+  cloud_firestore: null
+  cupertino_icons: ^1.0.2
+  firebase_analytics: null
+  firebase_auth: ^3.2.0
   flutter:
     sdk: flutter
-
-  firebase_analytics:
-  cloud_firestore:
-  google_sign_in:
-  cupertino_icons: ^1.0.2
+  flutter_slidable: 1.1.0
   flutter_svg: ^0.17.3+1
-  provider: ^6.0.1
-  local_auth:
+  google_sign_in: null
+  local_auth: null
+  provider:
   shared_preferences: ^2.0.9
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   flutter_lints: ^1.0.0
+  flutter_test:
+    sdk: flutter
 flutter:
   uses-material-design: true
 
